force-app/main/default/objects/Lead/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <description>Email associated with the lead&apos;s ElevenLabs account</description>
    <inlineHelpText>Email associated with the lead&apos;s ElevenLabs account</inlineHelpText>
    <label>Account Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>