force-app/main/default/objects/Lead/fields/AE_owner__c.field-meta.xml
<CustomField>
    <fullName>AE_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AE owner of this lead (if already assigned)</description>
    <inlineHelpText>AE owner of this lead (if already assigned)</inlineHelpText>
    <label>AE owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>