force-app/main/default/objects/Lead/fields/Apollo_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Account_ID__c</fullName>
    <description>The account (company) ID from Apollo</description>
    <inlineHelpText>The account (company) ID from Apollo</inlineHelpText>
    <label>Apollo Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>