force-app/main/default/objects/Lead/fields/Apollo_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Contact_ID__c</fullName>
    <description>The contact (person) ID from Apollo</description>
    <inlineHelpText>The contact (person) ID from Apollo</inlineHelpText>
    <label>Apollo Contact ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>