force-app/main/default/objects/Lead/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <inlineHelpText>Channel that the lead was received through</inlineHelpText>
    <label>Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Growth Referral</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Contact Sales Form</fullName>
            </value>
            <value>
                <fullName>Lemlist</fullName>
            </value>
            <value>
                <fullName>Investor Referral</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Paid campaign</fullName>
            </value>
            <value>
                <fullName>Network Referral</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Third-party gathered email</fullName>
            </value>
            <value>
                <fullName>ElevenLabs DB email</fullName>
            </value>
            <value>
                <fullName>Client referral</fullName>
            </value>
            <value>
                <fullName>Email upsell - grant opportunity</fullName>
            </value>
            <value>
                <fullName>Email upsell - existing customer</fullName>
            </value>
            <value>
                <fullName>Email upsell</fullName>
            </value>
            <value>
                <fullName>Upsells</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>PQL Workspace</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>