force-app/main/default/objects/Lead/fields/CompanyLeads__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>CompanyLeads__Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>