force-app/main/default/objects/Lead/fields/Disqualified_Category__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Category__c</fullName>
    <description>Selected category that best describes why the lead was disqualified</description>
    <inlineHelpText>Selected category that best describes why the lead was disqualified</inlineHelpText>
    <label>Disqualified Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low volume</fullName>
            </value>
            <value>
                <fullName>Not a decision maker</fullName>
            </value>
            <value>
                <fullName>Bad timing</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>