force-app/main/default/objects/Lead/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>Free form entry reason for why the lead was disqualified.</description>
    <inlineHelpText>Free form entry reason for why the lead was disqualified.</inlineHelpText>
    <label>Disqualified Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>