force-app/main/default/objects/Lead/fields/Distinct_ID__c.field-meta.xml
<CustomField>
    <fullName>Distinct_ID__c</fullName>
    <description>Distinct ID of the lead from PostHog (collected for all users including those not signed in)</description>
    <inlineHelpText>Distinct ID of the lead from PostHog (collected for all users including those not signed in)</inlineHelpText>
    <label>Distinct ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>