force-app/main/default/objects/Lead/fields/Expected_Monthly_Usage__c.field-meta.xml
<CustomField>
    <fullName>Expected_Monthly_Usage__c</fullName>
    <description>From the contact sales form</description>
    <inlineHelpText>From the contact sales form</inlineHelpText>
    <label>Expected Monthly Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>