force-app/main/default/objects/Lead/fields/External_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Lead_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Lead Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>