force-app/main/default/objects/Lead/fields/First_Meeting_Booked__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Booked__c</fullName>
    <inlineHelpText>Time when the first qualified meeting was booked</inlineHelpText>
    <label>First Meeting Booked</label>
    <type>DateTime</type>
</CustomField>