force-app/main/default/objects/Lead/fields/First_Meeting_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Timestamp__c</fullName>
    <inlineHelpText>When the first qualified sales meeting occurred.</inlineHelpText>
    <label>First Meeting Timestamp</label>
    <type>DateTime</type>
</CustomField>