force-app/main/default/objects/Lead/fields/Grant_End__c.field-meta.xml
<CustomField>
    <fullName>Grant_End__c</fullName>
    <description>Date that the grant ends</description>
    <inlineHelpText>Date that the grant ends</inlineHelpText>
    <label>Grant End</label>
    <type>DateTime</type>
</CustomField>