force-app/main/default/objects/Lead/fields/Grant_Start__c.field-meta.xml
<CustomField>
    <fullName>Grant_Start__c</fullName>
    <inlineHelpText>Timestamp of when the grant was approved</inlineHelpText>
    <label>Grant Start</label>
    <type>DateTime</type>
</CustomField>