force-app/main/default/objects/Lead/fields/How_did_they_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_they_hear_about_us__c</fullName>
    <description>Value entered by the lead in the contact sales form or other intake channel indicating how they heard about us</description>
    <inlineHelpText>Value entered by the lead in the contact sales form or other intake channel indicating how they heard about us</inlineHelpText>
    <label>How did they hear about us</label>
    <length>255</length>
    <type>Text</type>
</CustomField>