force-app/main/default/objects/Lead/fields/ICP__c.field-meta.xml
<CustomField>
    <fullName>ICP__c</fullName>
    <description>Type of Ideal Customer Profile that was used to identify the lead</description>
    <inlineHelpText>Type of Ideal Customer Profile that was used to identify the lead</inlineHelpText>
    <label>ICP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PQL - High PQL Score</fullName>
            </value>
            <value>
                <fullName>MQL - High MQL Score</fullName>
            </value>
            <value>
                <fullName>PQL - High Usage Scale User</fullName>
            </value>
            <value>
                <fullName>Grant - High Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>