force-app/main/default/objects/Lead/fields/Industry_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Industry_Enriched__c</fullName>
    <label>Industry Enriched</label>
    <length>250</length>
    <type>Text</type>
</CustomField>