force-app/main/default/objects/Lead/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <inlineHelpText>Legible deal id for programmatic retrieval</inlineHelpText>
    <label>Lead ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>