force-app/main/default/objects/Lead/fields/MQL_Score__c.field-meta.xml
<CustomField>
    <fullName>MQL_Score__c</fullName>
    <description>Marketing Qualification Score - indicates likelihood of a qualified lead based on their biographical information</description>
    <inlineHelpText>Marketing Qualification Score - indicates likelihood of a qualified lead based on their biographical information</inlineHelpText>
    <label>MQL Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>