force-app/main/default/objects/Lead/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Select an outcome option</description>
    <inlineHelpText>Select an outcome option</inlineHelpText>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected - not the right time</fullName>
            </value>
            <value>
                <fullName>Interested - moved to Deals</fullName>
            </value>
            <value>
                <fullName>Sent to self-serve - enterprise referral</fullName>
            </value>
            <value>
                <fullName>Rejected - already using a competitor</fullName>
            </value>
            <value>
                <fullName>Rejected - other</fullName>
            </value>
            <value>
                <fullName>Rejected - not interested</fullName>
            </value>
            <value>
                <fullName>Rejected - quality issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>