force-app/main/default/objects/Lead/fields/PQL_Score__c.field-meta.xml
<CustomField>
    <fullName>PQL_Score__c</fullName>
    <description>Product Qualification Score - indicates likelihood of a qualified lead based on their product usage metrics</description>
    <inlineHelpText>Product Qualification Score - indicates likelihood of a qualified lead based on their product usage metrics</inlineHelpText>
    <label>PQL Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>