force-app/main/default/objects/Lead/fields/Prospecting_Owner__c.field-meta.xml
<CustomField>
    <fullName>Prospecting_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that sourced/worked and qualified the lead</description>
    <inlineHelpText>User that sourced/worked and qualified the lead</inlineHelpText>
    <label>Prospecting Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>