force-app/main/default/objects/Lead/fields/Qualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Notes__c</fullName>
    <description>Context and next steps for this qualified lead</description>
    <inlineHelpText>Context and next steps for this qualified lead</inlineHelpText>
    <label>Qualification Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>