force-app/main/default/objects/Lead/fields/Re_Engagement_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Re_Engagement_Timestamp__c</fullName>
    <inlineHelpText>When do you want to be reminded to re-engage wth this lead?</inlineHelpText>
    <label>Re-Engagement Timestamp</label>
    <type>DateTime</type>
</CustomField>