force-app/main/default/objects/Lead/fields/Received_at__c.field-meta.xml
<CustomField>
    <fullName>Received_at__c</fullName>
    <description>Date when we received the lead or when we reached out to the lead</description>
    <inlineHelpText>Date when we received the lead or when we reached out to the lead</inlineHelpText>
    <label>Received at</label>
    <type>DateTime</type>
</CustomField>