force-app/main/default/objects/Lead/fields/Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin__c</fullName>
    <formula>IF(  ISPICKVAL( Territory__c , &apos;Europe&apos;) , MOD( VALUE( Lead_Number__c ), 3) + 1, 
IF( ISPICKVAL( Territory__c , &apos;North America&apos;), MOD( VALUE( Lead_Number__c ), 6) + 1, MOD( VALUE( Lead_Number__c ), 1) + 1) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>