force-app/main/default/objects/Lead/fields/Strategic__c.field-meta.xml
<CustomField>
    <fullName>Strategic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic</label>
    <type>Checkbox</type>
</CustomField>