force-app/main/default/objects/Lead/fields/Team_targeted__c.field-meta.xml
<CustomField>
    <fullName>Team_targeted__c</fullName>
    <description>The department or function of the company that the lead target belongs to</description>
    <inlineHelpText>The department or function of the company that the lead target belongs to</inlineHelpText>
    <label>Team targeted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C-level</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Conversational design</fullName>
            </value>
            <value>
                <fullName>Corporate Dev</fullName>
            </value>
            <value>
                <fullName>Digitalisation / Transformation</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>