force-app/main/default/objects/Lead/fields/Use_Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Detail__c</fullName>
    <description>Use case description from the contact sales form</description>
    <inlineHelpText>Use case description from the contact sales form</inlineHelpText>
    <label>Use Case Detail</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>