force-app/main/default/objects/Lead/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <inlineHelpText>User ID of ElevenLabs account (collected if the lead was signed in at the time of filling the form)</inlineHelpText>
    <label>User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>