force-app/main/default/objects/Lead/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <description>Identifies the source of the traffic (e.g., Google, Facebook, newsletter).</description>
    <inlineHelpText>Identifies the source of the traffic (e.g., Google, Facebook, newsletter).</inlineHelpText>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>