force-app/main/default/objects/Lead/fields/Workspace__c.field-meta.xml
<CustomField>
    <fullName>Workspace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workspace</label>
    <referenceTo>Workspace__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>