force-app/main/default/objects/Lead/recordTypes/Master1.recordType-meta.xml
<RecordType>
    <fullName>Master1</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Master</label>
</RecordType>