force-app/main/default/objects/Lead/recordTypes/Master_Recordtype.recordType-meta.xml
<RecordType>
    <fullName>Master_Recordtype</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Master</label>
</RecordType>