force-app/main/default/objects/Lead/validationRules/LV5StagePendingProspectRequiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>LV5StagePendingProspectRequiredFields</fullName>
    <active>true</active>
    <description>This VR will fire if Company, Region and Industry is not populated when changing Lead Status to Pending Prospect.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &apos;Pending Prospect&apos;),
NOT($Setup.Org_Control__c.Validation_Rule__c),
OR(
ISNEW(),
ISCHANGED(Status)
),
OR(ISBLANK(Company),
ISPICKVAL(Region__c, &apos;&apos;),
ISPICKVAL(Industry, &apos;&apos;))
)</errorConditionFormula>
    <errorMessage>LV5: Please populate Company, Region and Industry when changing Lead Status to Pending Prospect.</errorMessage>
</ValidationRule>